--- a/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/View/DSBHeaderSelectionView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/DashenBoardComponent/View/DSBHeaderSelectionView.xib
@@ -15,6 +15,10 @@
                 <outletCollection property="selectionBtns" destination="Xdp-sr-UnD" id="NDm-yY-o6c"/>
                 <outletCollection property="selectionBtns" destination="shf-dS-ItW" id="Ty6-o7-WJf"/>
                 <outletCollection property="selectionBtns" destination="Lut-aX-mxH" id="UtP-vv-oDf"/>
+                <outletCollection property="leadingCons" destination="bFs-2Q-d9M" id="SRz-rf-Xo3"/>
+                <outletCollection property="leadingCons" destination="3AO-6t-fDB" id="AMu-t5-4hD"/>
+                <outletCollection property="leadingCons" destination="yH6-PB-EKW" id="Vvh-qd-KAe"/>
+                <outletCollection property="leadingCons" destination="U1h-sc-4XK" id="ivA-aH-3Zb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -89,7 +93,7 @@
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="67" y="40"/>
+            <point key="canvasLocation" x="-141" y="4"/>
         </view>
     </objects>
 </document>
